--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: Playwright Tests
 on: workflow_dispatch
 
 jobs:
-  test:
+  Run Tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
