--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
 name: Playwright Tests
 
-on: workflow_dispatch
+on:
+    workflow_dispatch:
+    schedule:
+      - cron: "0 0 * * *" # Every day on midnight (GMT+0)
 
 jobs:
   Run_Tests:
